# linumpy-manual-align

./: .gitignore  README.md  manual_align.py  pyproject.toml  server_transfer.py  widget.py
.github/workflows/: ci.yml
docs/: cli-nextflow-guide.md  napari-plugin-nextflow-guide.md
src/linumpy_manual_align/: __init__.py  __main__.py  api.py  cross_section.py  image_utils.py  omezarr_io.py  server_transfer.py  settings.py  settings_runtime.py  state.py  transform_io.py  ui_builder.py  widget.py
src/linumpy_manual_align/io/: __init__.py  transform_io.py
src/linumpy_manual_align/remote/: __init__.py  cross_section.py  cs_script.py  cs_server.py  qt_workers.py  remote_reader.py  scp_ops.py  server_config.py
src/linumpy_manual_align/ui/: __init__.py  napari_menus.py  settings_dialog.py  ui_builder.py  widget.py  widget_build.py  widget_close_guard.py  widget_cross_section.py  widget_interaction.py  widget_mixins.py  widget_overlay.py  widget_pair_loading.py  widget_projection.py  widget_server.py  widget_settings_ui.py  widget_status.py  widget_typing.py  widget_ui.py  widget_undo_save.py
tests/: conftest.py  test_cross_section.py  test_cs_script.py  test_image_utils.py  test_omezarr_io.py  test_server_transfer.py  test_settings.py  test_transform_io.py  test_widget.py
