[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linumpy-manual-align"
version = "0.1.0"
description = "Interactive napari tool for manual slice alignment correction in linumpy serial histology pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "LINUM Lab" },
]
keywords = ["napari", "microscopy", "registration", "alignment", "serial-histology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari[all]>=0.5",
    "numpy",
    "scipy",
    "SimpleITK",
]

[project.optional-dependencies]
# Install with: pip install linumpy-manual-align[zarr]
# Required only when loading directly from OME-Zarr volumes (--input_dir mode)
zarr = ["linumpy"]

[project.scripts]
linumpy-manual-align = "linumpy_manual_align.__main__:main"

[project.urls]
Homepage = "https://github.com/linum-uqam/linumpy-manual-align"
Repository = "https://github.com/linum-uqam/linumpy-manual-align"

[tool.hatch.build.targets.wheel]
packages = ["src/linumpy_manual_align"]
