[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linumpy-manual-align"
version = "0.1.0"
description = "Interactive napari tool for manual slice alignment correction in linumpy serial histology pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "LINUM Lab" },
]
keywords = ["napari", "microscopy", "registration", "alignment", "serial-histology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari[all]>=0.5",
    "numpy",
    "scipy",
    "SimpleITK",
]

[project.optional-dependencies]
zarr = ["linumpy"]
dev = ["pytest", "ruff", "ty"]

[project.scripts]
linumpy-manual-align = "linumpy_manual_align.__main__:main"

[project.urls]
Homepage = "https://github.com/linum-uqam/linumpy-manual-align"
Repository = "https://github.com/linum-uqam/linumpy-manual-align"

[tool.hatch.build.targets.wheel]
packages = ["src/linumpy_manual_align"]

# --- ruff ---
[tool.ruff]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF", "SIM", "C4", "PIE", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["linumpy_manual_align"]

[tool.ruff.format]
# Use default (black-compatible) formatting

# --- ty ---
[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[tool.ty.rules]
possibly-unresolved-reference = "error"

[tool.ty.analysis]
replace-imports-with-any = ["linumpy.**", "napari.**", "numpy.**", "scipy.**", "SimpleITK.**", "qtpy.**"]
