[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linumpy-manual-align"
version = "0.1.0"
description = "CLI application (napari viewer) for manual slice alignment correction in linumpy serial histology pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "LINUM Lab" },
]
keywords = ["napari", "microscopy", "registration", "alignment", "serial-histology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari[all]>=0.5",
    "numpy>=1.26",
    "scipy>=1.11",
    "SimpleITK>=2.3",
]

[project.optional-dependencies]
zarr = ["ome-zarr>=0.9"]
dev = ["pytest", "ruff", "ty"]

[project.scripts]
linumpy-manual-align = "linumpy_manual_align.__main__:main"

[project.urls]
Homepage = "https://github.com/linum-uqam/linumpy-manual-align"
Repository = "https://github.com/linum-uqam/linumpy-manual-align"

[tool.hatch.build.targets.wheel]
packages = ["src/linumpy_manual_align"]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# --- ruff ---
[tool.ruff]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF", "SIM", "C4", "PIE", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["linumpy_manual_align"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# SimpleITK (SWIG) and transitive pydantic deprecations are noisy but outside this repo.
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:.*json_encoders.*:pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.ruff.format]
# Use default (black-compatible) formatting

# --- ty ---
[tool.ty.src]
# cs_server.py is a standalone server-side script uploaded via SSH; it imports
# linumpy which is not a local dependency and must not be type-checked here.
exclude = ["src/linumpy_manual_align/remote/cs_server.py"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[tool.ty.rules]
possibly-unresolved-reference = "error"

[tool.ty.analysis]
# Prefer real typings for numpy/scipy/SimpleITK in app code; keep Any only for UI/napari boundaries.
replace-imports-with-any = ["napari.**", "qtpy.**", "ome_zarr.**"]
